<resources>
    <string name="app_name">ProjectileMandate</string>
    <string name="play_button">Start</string>
    <string name="options_button">Options</string>
    <string name="leader_board_button">Leader Board</string>
    <string name="quit_button">Exit</string>
    <string name="color_scheme">Color Scheme:</string>
    <string name="light_button">Light</string>
    <string name="dark_button">Dark</string>
    <string name="difficulty">Difficulty:</string>
    <string name="easy_button">Easy</string>
    <string name="hard_button">Hard</string>
    <string name="clear_database_button">Clear Database</string>
    <string name="confirm_button">Confirm</string>
    <string name="score_dialog">Congratulations! Your score of %1$d was one of the ten best scores! Would you like to submit your score to the database?</string>
    <string name="score_dialog_title">Top Score!</string>
    <string name="score_dialog_positive">Submit</string>
    <string name="score_dialog_negative">Nah</string>
    <string name="score_dialog_hint">Enter your name.</string>
    <string name="empty_list">There are not any saved scores.</string>
    <string name="restart_game_text">Would you like to play again?</string>
    <string name="restart_game_title">Game Over!</string>
    <string name="restart_game_dialog_positive">Yes</string>
    <string name="restart_game_dialog_negative">No</string>
    <string name="index_col">Place</string>
    <string name="name_col">Player Name</string>
    <string name="score_col">Score</string>
</resources>
