<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_scheme"
            android:textSize="@dimen/text_size"/>
        <RadioGroup
            android:id="@+id/color_scheme_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@+id/light_button">
            <RadioButton
                android:id="@+id/light_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_button"/>
            <RadioButton
                android:id="@+id/dark_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_button"/>
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty"
            android:textSize="@dimen/text_size"/>
        <RadioGroup
            android:id="@+id/difficulty_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:checkedButton="@+id/easy_button">
            <RadioButton
                android:id="@+id/easy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/easy_button"/>
            <RadioButton
                android:id="@+id/hard_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard_button"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/clear_database_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_database_button"
        android:textSize="@dimen/text_size"/>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_button"
        android:textSize="@dimen/text_size"
        />

</LinearLayout>
