<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_gravity="center">
    <Button
        android:id="@+id/play_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_button"
        android:textSize="@dimen/text_size"/>
    <Button
        android:id="@+id/options_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_button"
        android:textSize="@dimen/text_size"/>
    <Button
        android:id="@+id/leader_board_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leader_board_button"
        android:textSize="@dimen/text_size"/>
    <Button
        android:id="@+id/quit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quit_button"
        android:textSize="@dimen/text_size"/>
</LinearLayout>