<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <TextView
        android:id="@+id/empty_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/empty_list"
        android:gravity="center"
        android:textSize="@dimen/text_size"/>
<!--
    <android.support.v7.widget.RecyclerView
        android:id="@+id/score_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
-->
    <TableLayout
        android:id="@+id/table_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:text="@string/index_col"/>
            <View
                android:id="@+id/divider_one"
                android:layout_width="@dimen/bar_width"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/text_size"
                android:text="@string/name_col"
                android:layout_weight="10"
                android:gravity="center"/>
            <View
                android:id="@+id/divider_two"
                android:layout_width="@dimen/bar_width"
                android:layout_height="match_parent"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:textSize="@dimen/text_size"
                android:gravity="center"
                android:text="@string/score_col"
                android:layout_weight="2"
                />
        </TableRow>
        <View
            android:id="@+id/divider_horiz"
            android:layout_height="@dimen/bar_width"
            android:layout_width="match_parent"/>
    </TableLayout>
</LinearLayout>
